<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddExpenseActivity">

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_amount"
        android:inputType="numberDecimal"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/spCurrency"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/currencies"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/etAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/spCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/categories"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/spCurrency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etRemark"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_remark"
        android:inputType="textMultiLine"
        android:minLines="2"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/spCategory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_created_date"
        android:focusable="false"
        android:clickable="true"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/etRemark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_expense"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/etDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
